Fixed dropdown menu shift

--- a/src/ui/Select/style.scss
+++ b/src/ui/Select/style.scss
@@ -67,6 +67,7 @@
   margin-top: 0 !important;
   max-width: 100%;
   overflow-x: hidden;
+  margin-left: -8px;
 }
 
 .hfui-select__menu-list {
